add - Titulo da atividade no head

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atividade 02: Site HTML – Explorando Tags Básicas</title>
 </head>
 <body>
     
