add - Titulo da atividade no header, primeira linha

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Atividade 02: Site HTML – Explorando Tags Básicas</title>
 </head>
 <body>
+    <h1><header>Explorando tags basicas</header></h1>
     
 </body>
 </html>
