add - adicionei a primeira tag sobre head

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Atividade 02: Site HTML – Explorando Tags Básicas</title>
 </head>
 <body>
-    <h1><header>Explorando tags basicas</header></h1>
+    <h1><header>Explorando tags basicas.</header></h1>
+    <p><h3>Tag 1- Head</h3></p>
+    <h4>Contém informações sobre a página, como titulo e informações que não aparecem no main</h4>
+    
+
     
 </body>
 </html>
