add - adicionei um código de exemplo "Olá Mundo"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 <body>
     <h1><header>Explorando tags basicas.</header></h1>
     <p><h3>Tag 1- Head</h3></p>
-    <h4>Contém informações sobre a página, como titulo e informações que não aparecem no main</h4>
+    <h4>Função: contém informações sobre a página, como titulo e informações que não aparecem no main</h4>
+    <h4> exemplo de código:
+        <html>
+        <head>
+            <meta charset="UTF-8"
+            <title> Minha Página</title>
+        </head>
+        <body>
+            <h1>Olá Mundo!</h1>
+        </body>
+        </html> </h4>
     
 
     
