--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <title>Atividade 02: Site HTML – Explorando Tags Básicas</title>
 </head>
 <body>
-    <h1><header>Explorando tags basicas.</header></h1>
+    <h1><header>Explorando tags basicas - Luiz Felipe Sendreto dos Santos TTDES M4 19/02
+    </header></h1>
     <p><h3>Tag 1- Head</h3></p>
     <h4>Função: contém informações sobre a página, como titulo e informações que não aparecem no main</h4>
     <h4> exemplo de código:
         <html>
         <head>
             <meta charset="UTF-8"
-            <title> Minha Página</title>
+            <title> </title>
         </head>
         <body>
-            <h1>Olá Mundo!</h1>
+            <h4>Olá Mundo!</h4>
         </body>
         </html> </h4>
+    <h4> <p> Demonstração visual da aplicação: </p> </h4>
+    <img src="c:\Users\Luiz Felipe\OneDrive\Área de Trabalho\HMTL\foto.png">
     
 
     
