add - adicionei um código com H1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <html>
         <head>
             <meta charset="UTF-8"
-            <title> </title>
+            <title> Exemplo código </title>
         </head>
         <body>
             <h4>Olá Mundo!</h4>
@@ -24,7 +24,12 @@
 
 
     <h1><header> Tag 2 - H1 </header></h1>
-    <H3>Função: define um titulo principal da pagina (maior nivel de titulo)</H3>
+        <H3>Função: define um titulo principal da pagina (maior nivel de titulo)</H3>
+        <H4> exemplo de código <br> </H4> 
+        <h1> Olá Mundo </h1>
+    <img src=""
+
+    
 
 
 
