--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
     <img src="c:\Users\Luiz Felipe\OneDrive\Área de Trabalho\HMTL\foto.png"> 
 
 
-    <h1><header> Tag 2 - H1 </header></h1>
-        <H3>Função: define um titulo principal da pagina (maior nivel de titulo)</H3>
+    <h3><header> Tag 2 - H1 </header></h3>
+        <H3> Função: define um titulo principal da pagina (maior nivel de titulo)</H3>
         <H4> exemplo de código <br> </H4> 
         <h1> Olá Mundo </h1>
-    <img src=""
+    <img src="C:\Users\Luiz Felipe\OneDrive\Área de Trabalho\html2\Captura de tela 2026-02-19 181233.png">
+
+    <h3><header> Tag 3 - <p> </p></header></h3>
+        <h3> Função: define um paragráfo do texto.</h3>
+        <h4> exemplo de código <br> </h4>
+        <p> Este paragráfo é um exemplo </p>
 
     
 
