add- adicionei demonstração visual do código

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <h1> Olá Mundo </h1>
     <img src="C:\Users\Luiz Felipe\OneDrive\Área de Trabalho\html2\Captura de tela 2026-02-19 181233.png">
 
-    <h3><header> Tag 3 - <p> </p></header></h3>
+    <h3><header> Tag 3 - < P > </p></header></h3>
         <h3> Função: define um paragráfo do texto.</h3>
         <h4> exemplo de código <br> </h4>
         <p> Este paragráfo é um exemplo </p>
+    <img src="C:\Users\Luiz Felipe\OneDrive\Imagens\Capturas de tela\Captura de tela 2026-02-19 183006.png"    
 
     
 
