add - criei a tag 4 inteiro

--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
 
     <h3><header> Tag 3 - < P > </p></header></h3>
         <h3> Função: define um paragráfo do texto.</h3>
-        <h4> exemplo de código <br> </h4>
+        <h4> exemplo de código: <br> </h4>
         <p> Este paragráfo é um exemplo </p>
-    <img src="C:\Users\Luiz Felipe\OneDrive\Imagens\Capturas de tela\Captura de tela 2026-02-19 183006.png"    
+    <img src="C:\Users\Luiz Felipe\OneDrive\Imagens\Capturas de tela\Captura de tela 2026-02-19 183006.png">
+
+    <h3> <header> Tag 4 - < a > </header> </h3>
+        <h3> Função:cria um link para outra pagina. </h3>
+        <h4> exemplo de código: <br> </h4>
+        <a href="https://blog.counter-strike.net/">Acessar blog do CS </a>
+    <img src="C:\Users\Luiz Felipe\OneDrive\Área de Trabalho\Captura de tela 2026-02-19 183904.png"    
 
     
 
