--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
         </h4>
     <img src="C:\Users\Luiz Felipe\OneDrive\Imagens\Capturas de tela\Captura de tela 2026-02-19 190518.png">    
 
+    <h3><header> Tag 7 - < ol > </header></h3>
+        <h3> Função:cria uma lista ordenada </h3>
+        <h4> exemplo de código:
+            <ol>
+                <li> Primeiro </li>
+                <li> Segundo </li>
+            </ol>
+        </h4>
+    <img src="C:\Users\Luiz Felipe\OneDrive\Imagens\Capturas de tela\Captura de tela 2026-02-19 191425.png">
+    
+    <h3><header> Tag 8 - < table > </header></h3>
+        <h3> Função: cria uma </h3>
+
     
 
 
